added code to find the center of tiles

--- a/Map/Getting_Sentinel_2_tiles.ipynb
+++ b/Map/Getting_Sentinel_2_tiles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 1,
    "id": "6886aa56",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 2,
    "id": "67b6e49e",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Querying products: 100%|████████████████████████████████████████████████████| 2903/2903 [00:51<00:00, 54.35 products/s]\n"
+      "Querying products: 100%|████████████████████████████████████████████████████| 2903/2903 [00:55<00:00, 50.30 products/s]\n"
      ]
     },
     {
@@ -361,7 +361,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 3,
    "id": "6be59b53",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1062,7 @@
        "[15 rows x 38 columns]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 25,
    "id": "ea6f9c63",
    "metadata": {},
    "outputs": [],
@@ -1187,7 +1187,7 @@
     "    return geo\n",
     "\n",
     "\n",
-    "def create_all_tiles_map(df, m):\n",
+    "def create_all_tiles_map(df, m, filename='all_tiles.html'):\n",
     "    \n",
     "    colors = ['red', 'blue', 'green', \n",
     "             'purple', 'orange', 'darkred', \n",
@@ -1214,7 +1214,7 @@
     "\n",
     "        folium.GeoJsonTooltip(fields=[\"tile_name\"]).add_to(g)\n",
     "        \n",
-    "    m.save('all_tiles.html')  \n",
+    "    m.save(filename)  \n",
     "\n",
     "    \n",
     "m = folium.Map(location=[37, 0],\n",
@@ -1227,189 +1227,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "id": "d7f6a49a",
+   "execution_count": 38,
+   "id": "5b40ee8c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tileid</th>\n",
-       "      <th>centroid</th>\n",
-       "      <th>footprint</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>tileid</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>29UMA</th>\n",
-       "      <td>29UMA</td>\n",
-       "      <td>((-9.697923253768604, 54.55058824328048))</td>\n",
-       "      <td>MULTIPOLYGON (((-10.528076 54.050496442234184,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29UMT</th>\n",
-       "      <td>29UMT</td>\n",
-       "      <td>((-9.655436133582153, 51.85412925779467))</td>\n",
-       "      <td>MULTIPOLYGON (((-10.436707 51.354432348394134,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29UMU</th>\n",
-       "      <td>29UMU</td>\n",
-       "      <td>((-9.668850625177695, 52.75326926738678))</td>\n",
-       "      <td>MULTIPOLYGON (((-10.465576 52.25344953517325, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29UMV</th>\n",
-       "      <td>29UMV</td>\n",
-       "      <td>((-9.682990148762912, 53.65172975598183))</td>\n",
-       "      <td>MULTIPOLYGON (((-10.495972 53.151777988193025,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29UNA</th>\n",
-       "      <td>29UNA</td>\n",
-       "      <td>((-8.151499149823572, 54.54962630365665))</td>\n",
-       "      <td>MULTIPOLYGON (((-7.3232117 54.04851470634905, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29UNB</th>\n",
-       "      <td>29UNB</td>\n",
-       "      <td>((-8.13231560361485, 55.44831281334956))</td>\n",
-       "      <td>MULTIPOLYGON (((-7.2860107 54.947017819877004,...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29UNT</th>\n",
-       "      <td>29UNT</td>\n",
-       "      <td>((-8.203157114995863, 51.85325785693969))</td>\n",
-       "      <td>MULTIPOLYGON (((-7.423481335788423 51.35263389...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29UNU</th>\n",
-       "      <td>29UNU</td>\n",
-       "      <td>((-8.186851779707812, 52.75236962343704))</td>\n",
-       "      <td>MULTIPOLYGON (((-7.391815 52.25159244435569, -...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29UNV</th>\n",
-       "      <td>29UNV</td>\n",
-       "      <td>((-8.169660207440636, 53.650797394580295))</td>\n",
-       "      <td>MULTIPOLYGON (((-7.358429 53.14985988974457, -...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29UPA</th>\n",
-       "      <td>29UPA</td>\n",
-       "      <td>((-6.6061207438244205, 54.52891077349379))</td>\n",
-       "      <td>MULTIPOLYGON (((-5.797516 54.017541579537756, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29UPB</th>\n",
-       "      <td>29UPB</td>\n",
-       "      <td>((-6.552045843910836, 55.42689828239511))</td>\n",
-       "      <td>MULTIPOLYGON (((-5.726573271226144 54.91500722...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29UPT</th>\n",
-       "      <td>29UPT</td>\n",
-       "      <td>((-6.751711239638286, 51.834466431241566))</td>\n",
-       "      <td>MULTIPOLYGON (((-5.988745877405147 51.32452335...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29UPU</th>\n",
-       "      <td>29UPU</td>\n",
-       "      <td>((-6.705731038867848, 52.732960828279495))</td>\n",
-       "      <td>MULTIPOLYGON (((-5.928314 52.22256603361336, -...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29UPV</th>\n",
-       "      <td>29UPV</td>\n",
-       "      <td>((-6.657285739980675, 53.63075069438569))</td>\n",
-       "      <td>MULTIPOLYGON (((-5.864679630795914 53.11988062...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30UUF</th>\n",
-       "      <td>30UUF</td>\n",
-       "      <td>((-5.242565238292145, 54.53181118030394))</td>\n",
-       "      <td>MULTIPOLYGON (((-6.053142425250217 54.02143071...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       tileid                                    centroid  \\\n",
-       "tileid                                                      \n",
-       "29UMA   29UMA   ((-9.697923253768604, 54.55058824328048))   \n",
-       "29UMT   29UMT   ((-9.655436133582153, 51.85412925779467))   \n",
-       "29UMU   29UMU   ((-9.668850625177695, 52.75326926738678))   \n",
-       "29UMV   29UMV   ((-9.682990148762912, 53.65172975598183))   \n",
-       "29UNA   29UNA   ((-8.151499149823572, 54.54962630365665))   \n",
-       "29UNB   29UNB    ((-8.13231560361485, 55.44831281334956))   \n",
-       "29UNT   29UNT   ((-8.203157114995863, 51.85325785693969))   \n",
-       "29UNU   29UNU   ((-8.186851779707812, 52.75236962343704))   \n",
-       "29UNV   29UNV  ((-8.169660207440636, 53.650797394580295))   \n",
-       "29UPA   29UPA  ((-6.6061207438244205, 54.52891077349379))   \n",
-       "29UPB   29UPB   ((-6.552045843910836, 55.42689828239511))   \n",
-       "29UPT   29UPT  ((-6.751711239638286, 51.834466431241566))   \n",
-       "29UPU   29UPU  ((-6.705731038867848, 52.732960828279495))   \n",
-       "29UPV   29UPV   ((-6.657285739980675, 53.63075069438569))   \n",
-       "30UUF   30UUF   ((-5.242565238292145, 54.53181118030394))   \n",
-       "\n",
-       "                                                footprint  \n",
-       "tileid                                                     \n",
-       "29UMA   MULTIPOLYGON (((-10.528076 54.050496442234184,...  \n",
-       "29UMT   MULTIPOLYGON (((-10.436707 51.354432348394134,...  \n",
-       "29UMU   MULTIPOLYGON (((-10.465576 52.25344953517325, ...  \n",
-       "29UMV   MULTIPOLYGON (((-10.495972 53.151777988193025,...  \n",
-       "29UNA   MULTIPOLYGON (((-7.3232117 54.04851470634905, ...  \n",
-       "29UNB   MULTIPOLYGON (((-7.2860107 54.947017819877004,...  \n",
-       "29UNT   MULTIPOLYGON (((-7.423481335788423 51.35263389...  \n",
-       "29UNU   MULTIPOLYGON (((-7.391815 52.25159244435569, -...  \n",
-       "29UNV   MULTIPOLYGON (((-7.358429 53.14985988974457, -...  \n",
-       "29UPA   MULTIPOLYGON (((-5.797516 54.017541579537756, ...  \n",
-       "29UPB   MULTIPOLYGON (((-5.726573271226144 54.91500722...  \n",
-       "29UPT   MULTIPOLYGON (((-5.988745877405147 51.32452335...  \n",
-       "29UPU   MULTIPOLYGON (((-5.928314 52.22256603361336, -...  \n",
-       "29UPV   MULTIPOLYGON (((-5.864679630795914 53.11988062...  \n",
-       "30UUF   MULTIPOLYGON (((-6.053142425250217 54.02143071...  "
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# convert the multipolygon to geojson\n",
-    "tiles_of_interest[['tileid','centroid','footprint']]"
+    "def create_small_bounding_box(top_left_x,top_left_y):\n",
+    "    \n",
+    "    top_right_x = top_left_x + 0.05\n",
+    "    top_right_y = top_left_y\n",
+    "    \n",
+    "    bottom_left_x = top_left_x\n",
+    "    bottom_left_y = top_left_y - 0.05\n",
+    "    \n",
+    "    bottom_right_x = top_left_x + 0.05\n",
+    "    bottom_right_y = top_left_y - 0.05\n",
+    "    \n",
+    "    #return f'{top_left_x}/{top_left_y},{bottom_right_x}/{bottom_right_y},{top_right_x}/{top_right_y},{bottom_right_x}/{bottom_right_y}'\n",
+    "    return f'{top_left_x}/{top_left_y},{bottom_left_x}/{bottom_left_y},{bottom_right_x}/{bottom_right_y},{top_right_x}/{top_right_y}'\n",
+    "    \n",
+    "def format_coord_center_points(string_):\n",
+    "    \n",
+    "\n",
+    "    long_lat = []\n",
+    "    for str_coord in string_.split(','):\n",
+    "\n",
+    "        long_lat.append(str_coord.lstrip().split('/'))\n",
+    "    \n",
+    "    long_lat = [list(map(float, sublist)) for sublist in long_lat]\n",
+    "    \n",
+    "    poly = []\n",
+    "    for elem in long_lat:\n",
+    "        x, y = elem\n",
+    "        poly.append([x,y])\n",
+    "\n",
+    "    \n",
+    "    return poly    \n",
+    "\n",
+    "\n",
+    "def create_geo_json_feature(coords, name):\n",
+    "    \n",
+    "    coords = format_coord_center_points(coords)\n",
+    "    \n",
+    "    geo = {\n",
+    "        \"type\": \"Feature\",\n",
+    "        \"properties\": {\"tile_name\": name},\n",
+    "        \"geometry\": {\n",
+    "            \"type\": \"Polygon\",\n",
+    "            \"coordinates\": [coords]\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    return geo\n",
+    "\n",
+    "\n",
+    "def create_tile_center_map(df, m, filename='tiles_center_point.html'):\n",
+    "    \n",
+    "    colors = ['red', 'blue', 'green', \n",
+    "             'purple', 'orange', 'darkred', \n",
+    "             'lightred', 'beige', 'darkblue', \n",
+    "             'darkgreen', 'cadetblue', 'darkpurple', 'white', \n",
+    "             'pink', 'lightblue', 'lightgreen', 'gray', \n",
+    "             'black', 'lightgray']\n",
+    "    \n",
+    "    tile_names = df.tileid.values\n",
+    "    center_points = df.center_points.values\n",
+    "    for center_point, tile in zip(center_points, tile_names):\n",
+    "        \n",
+    "        geo = create_geo_json_feature(center_point, tile)\n",
+    "        color = random.choice(colors)\n",
+    "        \n",
+    "        g = folium.GeoJson(\n",
+    "            geo,\n",
+    "            style_function=lambda feature: {\n",
+    "                    'fillColor':color,\n",
+    "                    'color':color,\n",
+    "                    'fillOpacity':0.5\n",
+    "                },   \n",
+    "        ).add_to(m)\n",
+    "\n",
+    "        folium.GeoJsonTooltip(fields=[\"tile_name\"]).add_to(g)\n",
+    "        \n",
+    "    m.save(filename)  \n",
+    "\n",
+    "    \n",
+    "m = folium.Map(location=[37, 0],\n",
+    "               zoom_start=2.5,\n",
+    "               tiles='https://server.arcgisonline.com/arcgis/rest/services/Canvas/World_Dark_Gray_Base/MapServer/tile/{z}/{y}/{x}',\n",
+    "               attr='My Data Attribution')\n",
+    "\n",
+    "    \n",
+    "tiles_of_interest['center_points'] = tiles_of_interest['centroid'].apply(lambda shap_coord: create_small_bounding_box(shap_coord[0][0],shap_coord[0][1]))\n",
+    "create_tile_center_map(tiles_of_interest, m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "9a499ded",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tiles_of_interest[['tileid','center_points']].to_csv('centre_point_of_tiles.csv',index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5652884f",
+   "id": "b9359d39",
    "metadata": {},
    "outputs": [],
    "source": []
