--- a/Map/Getting_Sentinel_2_tiles.ipynb
+++ b/Map/Getting_Sentinel_2_tiles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6886aa56",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "67b6e49e",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Querying products: 100%|████████████████████████████████████████████████████| 2903/2903 [00:55<00:00, 50.30 products/s]\n"
+      "Querying products: 100%|██████████████████████████████████| 2903/2903 [00:52<00:00, 53.52 products/s]\n"
      ]
     },
     {
@@ -361,7 +361,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6be59b53",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1062,7 @@
        "[15 rows x 38 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "ea6f9c63",
    "metadata": {},
    "outputs": [],
@@ -1227,12 +1227,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "5b40ee8c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_small_bounding_box(top_left_x,top_left_y):\n",
+    "def create_small_bounding_box(top_left_x, top_left_y):\n",
     "    \n",
     "    top_right_x = top_left_x + 0.05\n",
     "    top_right_y = top_left_y\n",
@@ -1244,8 +1244,9 @@
     "    bottom_right_y = top_left_y - 0.05\n",
     "    \n",
     "    #return f'{top_left_x}/{top_left_y},{bottom_right_x}/{bottom_right_y},{top_right_x}/{top_right_y},{bottom_right_x}/{bottom_right_y}'\n",
-    "    return f'{top_left_x}/{top_left_y},{bottom_left_x}/{bottom_left_y},{bottom_right_x}/{bottom_right_y},{top_right_x}/{top_right_y}'\n",
-    "    \n",
+    "    return f'{top_left_x}/{top_left_y},{bottom_left_x}/{bottom_left_y},{bottom_right_x}/{bottom_right_y},{top_right_x}/{top_right_y},{top_left_x}/{top_left_y}'\n",
+    "\n",
+    "\n",
     "def format_coord_center_points(string_):\n",
     "    \n",
     "\n",
@@ -1323,21 +1324,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "9a499ded",
+   "execution_count": 24,
+   "id": "9dc1edf3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tiles_of_interest[['tileid','center_points']].to_csv('centre_point_of_tiles.csv',index=False)"
+    "def format_coords(string_):\n",
+    "    \n",
+    "    between_brackets = string_[string_.find(\"(\")+3:string_.find(\")))\")]\n",
+    "    between_brackets = between_brackets.replace(')','').replace('(','')\n",
+    "    \n",
+    "    long_lat = []\n",
+    "    for str_coord in between_brackets.split(','):\n",
+    "\n",
+    "        long_lat.append(str_coord.lstrip().split(' '))\n",
+    "    \n",
+    "    long_lat = [list(map(float, sublist)) for sublist in long_lat]\n",
+    "    \n",
+    "    poly = []\n",
+    "    for elem in long_lat:\n",
+    "        x, y = elem\n",
+    "        poly.append([x,y])\n",
+    "\n",
+    "    \n",
+    "    return poly\n",
+    "\n",
+    "tiles_of_interest['tile_top_corner'] = tiles_of_interest.footprint.apply(lambda x: str(format_coords(x)[2]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b9359d39",
+   "execution_count": 25,
+   "id": "9a499ded",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tiles_of_interest[['tileid','center_points', 'tile_top_corner']].to_csv('centre_point_of_tiles.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b9359d39",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tiles_of_interest' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-3545251b5859>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtiles_of_interest\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'tiles_of_interest' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "tiles_of_interest"
+   ]
   }
  ],
  "metadata": {
